<resources>
    <string name="app_name">Tic-Tac-Droid</string>
    <string name="play">Play</string>
    <string name="options">Options</string>
    <string name="tic_tac_droid">Tic-Tac-Droid</string>
    <string name="_1_player">1 player</string>
    <string name="_2_players">2 players</string>
    <string name="copyright_ndank_stuff_corporation_nall_rights_reserved">Copyright %1$d © \nDank Stuff Corporation\nAll rights reserved</string>
    <string name="how_many_people_are_playing">How many people are playing ?</string>
    <string name="circle">Circle</string>
    <string name="cross">Cross</string>
    <string name="player_1_apos_s_turn">%1$s\'s Turn</string>
    <string name="texte_victoire">%1$s won !</string>
    <string name="texte_egalite">Nobody won</string>
    <string name="back_to_main_menu">Back to main menu</string>
    <string name="replay">Replay</string>
    <string name="fonctionindisponible">We\'re sorry, this feature is not available yet. We\'re working on it for the next update.</string>
    <string name="options2">Options</string>
    <string name="starting_symbol">Starting symbol</string>
    <string name="cross2">Cross</string>
    <string name="circle2">Circle</string>
    <string name="computer_difficulty">Computer difficulty</string>
    <string name="cross3">Cross</string>
    <string name="circle3">Circle</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="dumb">Dumb</string>
    <string name="help">Help</string>
    <string name="statistics">Statistics</string>
    <string name="human">Human</string>
    <string name="computer">Computer</string>
    <string name="make_computer_think_faster">Make computer think faster</string>
</resources>
