<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/options2"
                    android:id="@+id/textView4"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp" />
            </FrameLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#e3e3e3"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/starting_symbol"
                    android:id="@+id/textView7"
                    android:layout_gravity="center_horizontal" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:id="@+id/radioGroupFirstPlayer">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radiobuttoncross"
                        android:text="@string/cross3"
                        android:layout_marginRight="13dp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radiobuttoncircle"
                        android:checked="false"
                        android:text="@string/circle3"
                        android:layout_marginLeft="13dp" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#e3e3e3"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/computer_difficulty"
                    android:id="@+id/textView5"
                    android:layout_gravity="center_horizontal" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:id="@+id/radioGroupComputerDifficukty" >
                    <!--
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButtondumb"
                        android:text="@string/dumb"
                        android:checked="false"/>
                        -->
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButtoneasy"
                        android:text="@string/easy"
                        android:checked="false" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButtonmedium"
                        android:checked="false"
                        android:text="@string/medium"
                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButtonhard"
                        android:checked="false"
                        android:text="@string/hard"
                        />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#e3e3e3"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView6"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/make_computer_think_faster" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/switchOrdinateurPlusRapide"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>