<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tic_tac_droid"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:layout_marginBottom="92dp"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:id="@+id/button"
            android:onClick="onClickGoToSelectionNombreDeJoueurs"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/options"
            android:id="@+id/button2"
            android:onClick="onClickGoToOptions"
            android:layout_marginBottom="5dp"/>

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
            android:id="@+id/button5"
            android:onClick="onClickGoToStatistiques"
            android:layout_marginBottom="5dp"/>
        <!--
        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:id="@+id/button6"
            android:onClick="onClickGoToAide"/>
        -->
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textSize="12sp"
        android:textColor="@color/colorPrimaryDark" />

</RelativeLayout>