<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_above="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/how_many_people_are_playing"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:textColor="#000000"
            android:gravity="center_vertical|center_horizontal" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2">

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/_1_player"
            android:id="@+id/bouton_1_joueur"
            android:layout_marginBottom="30dp"
            android:onClick="onClickGotoSelectionSymbole" />

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/_2_players"
            android:id="@+id/bouton_2_joueurs"
            android:onClick="onClickGotoSelectionSymbole" />
    </LinearLayout>

</RelativeLayout>